--- a/experiments_analysis/single_analysis_but_better.ipynb
+++ b/experiments_analysis/single_analysis_but_better.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "21de4afb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2c176373",
    "metadata": {},
    "outputs": [],
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8f3b9705",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('results/all_results_concat.csv')\n",
-    "df = prepare_df(df, half_scores=True)[0]\n",
-    "df_no_half_scores = prepare_df(df, half_scores=False)[0]"
+    "df = pd.read_csv('../results/all_results_concat.csv')\n",
+    "df, df_ensembles = prepare_df(df, half_scores=True)\n",
+    "df_no_half_scores, df_ensembles_no_half_scores = prepare_df(df, half_scores=False)"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "4bfc6ff4",
    "metadata": {},
    "outputs": [],
@@ -1753,6 +1753,146 @@
     "# mean_accuracy = mean_accuracy.sort_values(\"mean_percentage\", ascending=False)\n",
     "# mean_accuracy.to_csv('results/accuracy_stats.csv', index=False)   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b071c66",
+   "metadata": {},
+   "source": [
+    "## Ensembles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5db38dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "df_ensembles[\"ensemble_model\"] = np.where(\n",
+    "    df_ensembles[\"version\"] >= 100,\n",
+    "    \"Qwen7B\",\n",
+    "    \"Intern8B\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f59d07ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_cols=[\"type_name\", \"dataset_name\", \"ens_members_config_number\", \"seed\", \"ensemble_model\"]\n",
+    "accuracy_df_ensembles = accuracy_stats(df_ensembles, group_cols=group_cols)\n",
+    "# print(accuracy_df_ensembles)\n",
+    "\n",
+    "agg_group_cols = [\"type_name\", \"ens_members_config_number\", \"dataset_name\"]\n",
+    "mean_accuracy_conf = accuracy_df_ensembles.groupby(agg_group_cols).agg(\n",
+    "    mean_percentage=(\"percentage\", \"mean\"),\n",
+    "    sd_percentage=(\"percentage\", \"std\"),\n",
+    "    total_score=(\"total_score\", \"sum\"),\n",
+    "    total_possible=(\"all_possible\", \"sum\")\n",
+    ").reset_index()\n",
+    "# print(mean_accuracy_conf.sort_values(\"mean_percentage\", ascending=False))\n",
+    "\n",
+    "agg_group_cols_2 = [\"type_name\", \"dataset_name\", \"ensemble_model\"]\n",
+    "mean_accuracy_seed = accuracy_df_ensembles.groupby(agg_group_cols_2).agg(\n",
+    "    mean_percentage=(\"percentage\", \"mean\"),\n",
+    "    sd_percentage=(\"percentage\", \"std\"),\n",
+    "    total_score=(\"total_score\", \"sum\"),\n",
+    "    total_possible=(\"all_possible\", \"sum\")\n",
+    ").reset_index()\n",
+    "# print(mean_accuracy_seed.sort_values(\"mean_percentage\", ascending=False))\n",
+    "\n",
+    "\n",
+    "agg_group_top = [\"type_name\", \"ensemble_model\", \"ens_members_config_number\", \"dataset_name\"]\n",
+    "mean_accuracy_top = accuracy_df_ensembles.groupby(agg_group_top).agg(\n",
+    "    mean_percentage=(\"percentage\", \"mean\"),\n",
+    "    sd_percentage=(\"percentage\", \"std\"),\n",
+    "    total_score=(\"total_score\", \"sum\"),\n",
+    "    total_possible=(\"all_possible\", \"sum\")\n",
+    ").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "6b5722e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                type_name               ensemble_model  \\\n",
+      "223  reasoning_with_image                     Intern8B   \n",
+      "73               majority                     Intern8B   \n",
+      "108              majority  Qwen/Qwen2.5-VL-7B-Instruct   \n",
+      "239  reasoning_with_image                     Intern8B   \n",
+      "215  reasoning_with_image                     Intern8B   \n",
+      "..                    ...                          ...   \n",
+      "11             confidence                     Intern8B   \n",
+      "120              majority  Qwen/Qwen2.5-VL-7B-Instruct   \n",
+      "85               majority                     Intern8B   \n",
+      "50             confidence  Qwen/Qwen2.5-VL-7B-Instruct   \n",
+      "15             confidence                     Intern8B   \n",
+      "\n",
+      "     ens_members_config_number dataset_name  mean_percentage  sd_percentage  \\\n",
+      "223                        3.0        raven             85.0            NaN   \n",
+      "73                         0.0        raven             84.3       0.948683   \n",
+      "108                        0.0        raven             84.3       0.948683   \n",
+      "239                        7.0        raven             83.0            NaN   \n",
+      "215                        1.0        raven             83.0            NaN   \n",
+      "..                         ...          ...              ...            ...   \n",
+      "11                         2.0        raven             11.2       0.632456   \n",
+      "120                        3.0        raven             10.8       2.201010   \n",
+      "85                         3.0        raven             10.8       2.201010   \n",
+      "50                         3.0        raven             10.5       1.649916   \n",
+      "15                         3.0        raven             10.5       1.649916   \n",
+      "\n",
+      "     total_score  total_possible  \n",
+      "223         85.0             100  \n",
+      "73         843.0            1000  \n",
+      "108        843.0            1000  \n",
+      "239         83.0             100  \n",
+      "215         83.0             100  \n",
+      "..           ...             ...  \n",
+      "11         112.0            1000  \n",
+      "120        108.0            1000  \n",
+      "85         108.0            1000  \n",
+      "50         105.0            1000  \n",
+      "15         105.0            1000  \n",
+      "\n",
+      "[72 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_accuracy_top[mean_accuracy_top[\"dataset_name\"] == \"raven\"].sort_values(\"mean_percentage\", ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "edb0fe4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_accuracy_conf.to_csv('results/accuracy_stats_ensembles_conf.csv', index=False)   \n",
+    "mean_accuracy_seed.to_csv('results/accuracy_stats_ensembles_seed.csv', index=False)\n",
+    "accuracy_df_ensembles.to_csv('results/accuracy_stats_ensembles.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea9d5633",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
